--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
   "ownerNumber": [
-    "6284372720799",
+    "94701515609",
     "62xx",
     "62xxx",
     "62xxxx"
   ],
-  "readme": "isi nomornya ownerNumber sesuai ada berapa no kalian mau banyak nomor juga bisa, jangan lupa tanda koma nya harus pas biar ga eror , install modul pake npm i di panel/vps atau yarn di termux",
-  "contact": "62895622022075",
-  "botName": "Maleficent Bot 💕",
-  "ownerName": "Ruly Henderson",
+  "readme": "",
+  "contact": "94701515609",
+  "botName": "DENUWAN-XMD",
+  "ownerName": "Denuwan",
   "footer": "© Ruhend",
   "sosmed": "https://Instagram.com/ru_hend_",
-  "thumbnail": "https://telegra.ph/file/0aa662111090f4a70c8f4.jpg",
+  "thumbnail": "https://i.ibb.co/TKWPp4v/4937.jpg",
   "music": "https://qu.ax/Ajdr.mp3",
   "ram": 950,
   "readme2": "botNumber adalah nomor yang mau di jadikan bot",
-  "botNumber": "62895622022075"
+  "botNumber": "94783919841"
 }
